# junk_drawer

./: README.md
llm/: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml
llm/examples/: example_commands.yaml
llm/tests/: __init__.py  test_command_mapper.py  test_config.py  test_executor.py  test_recognizer.py
llm/voice_assistant/: __init__.py  __main__.py  audio.py  command_mapper.py  config.py  executor.py  recognizer.py  utils.py  wake_word.py
raspberrypi/: setup.sh
ruby/: install.sh
